# yaya-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
tests/: test_classifier_orientation.py  test_darknet_parsing.py  test_dataset_detection.py  test_hello_world.py  test_np_boxes.py
tests/test_dataset/: train.txt
tests/test_orientation/diagonal_right/: r.rejestracja3f770e91aa0f92336dccc62845965d8d108899e8.txt
tests/test_orientation/horizontal/: r.rejestracjad0d883076012b60d5ac39134201def9d9cc21ecf.txt
tests/test_orientation/leftdown/: 115.18Alpr.txt  167.2Alpr.txt
yaya-tools/: pyproject.toml
yaya_tools/: main.py  yaya_albumentate.py  yaya_augument.py  yaya_benchmark.py  yaya_darknet.py  yaya_darknet_logs_qt5.py  yaya_dataset.py  yaya_datasetdiff.py  yaya_inference.py  yaya_inference_qt5.py  yaya_logs.py  yaya_readme.py  yaya_resize.py  yaya_test.py  yaya_video_affine.py
yaya_tools/augmentations/: prop.py
yaya_tools/classifiers/: classifier_orientation.py
yaya_tools/detection/: darknet.py  detection_test.py  detector.py  detector_yolov4_cvdnn.py  detector_yolov4_darknet.py
yaya_tools/helpers/: annotations.py  augmentations.py  checks.py  darknet_parsing.py  dataset.py  files.py  hashing.py  image_multiprocessing.py  np_boxes.py  terminal_logging.py  yolo_format.py  yolo_yaml.py
