[tool.poetry]
name = "yaya-tools"
version = "1.1.0"
description = ""
authors = ["Sławomir Paszko <s.paszko@aisp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
supervision = "^0.25.1"
tqdm = "^4.67.1"

albumentations = "^2.0.2"
scipy-stubs = "^1.15.1.0"
[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.12.12"
black = "^25.1.0"
mypy = "^1.14.1"
pytest = "^8.3.4"
isort = "^6.0.0"
types-tqdm = "^4.67.0.20241221"

types-pyyaml = "^6.0.12.20241230"
[tool.black]
line-length = 120
#Needed as of black 23.12.1 to properly split long stings
preview = true
exclude = '''
/(
    \.venv
    | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = ['.venv', '.pytest_cache']


[tool.flake8]
max-line-length = 120
extend-select = ['B950']
# E203, E501, E701 are rules incompatiblie with black and are exclued as recommended by black documentation
extend-ignore = ['E501', 'E701', 'E203', 'B950']
extend-exclude = ['.venv', '.pytest_cache']

[tool.mypy]
exclude = ['.venv', '.pytest_cache']

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yaya-test = "yaya_tools.yaya_test:main"
yaya-dataset = "yaya_tools.yaya_dataset:main"
yaya-datasetdiff = "yaya_tools.yaya_datasetdiff:main"
yaya-resize = "yaya_tools.yaya_resize:main"
yaya-benchmark = "yaya_tools.yaya_benchmark:main"
